	* removed deprecated fields from add_torrent_params
	* deprecate "resume_data" field in add_torrent_params
	* improved support for bind-to-device
	* deprecated ssl_listen, SSL sockets are specified in listen_interfaces now
	* improved support for listening on multiple sockets and interfaces
	* resume data no longer has timestamps of files
	* require C++11 to build libtorrent

	* fix issue with receiving interested before metadata
	* fix IPv6 tracker announce issue
	* restore path sanitization behavior of ":"
	* fix listen socket issue when disabling "force_proxy" mode
	* fix full allocation failure on APFS

1.1.5 release

	* fix infinite loop when parsing certain invalid magnet links
	* fix parsing of torrents with certain invalid filenames
	* fix leak of torrent_peer objecs (entries in peer_list)
	* fix leak of peer_class objects (when setting per-torrent rate limits)
	* expose peer_class API to python binding
	* fix integer overflow in whole_pieces_threshold logic
	* fix uTP path MTU discovery issue on windows (DF bit was not set correctly)
	* fix python binding for torrent_handle, to be hashable
	* fix IPv6 tracker support by performing the second announce in more cases
	* fix utf-8 encoding check in torrent parser
	* fix infinite loop when parsing maliciously crafted torrents
	* fix invalid read in parse_int in bdecoder
	* fix issue with very long tracker- and web seed URLs
	* don't attempt to create empty files on startup, if they already exist
	* fix force-recheck issue (new files would not be picked up)
	* fix inconsistency in file_priorities and override_resume_data behavior
	* fix paused torrents not generating a state update when their ul/dl rate
	  transitions to zero

1.1.4 release

	* corrected missing const qualifiers on bdecode_node
	* fix changing queue position of paused torrents (1.1.3 regression)
	* fix re-check issue after move_storage
	* handle invalid arguments to set_piece_deadline()
	* move_storage did not work for torrents without metadata