@@ -81,6 +81,7 @@
 	* resume data no longer has timestamps of files
 	* require C++11 to build libtorrent
 
+	* fix issue with initializing settings on session construction
 	* fix issue with receiving interested before metadata
 	* fix IPv6 tracker announce issue
 	* restore path sanitization behavior of ":"
